--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,28 @@
 asgiref==3.5.0
+certifi==2021.10.8
+cffi==1.15.0
+charset-normalizer==2.0.12
+click==8.0.4
+cryptography==36.0.2
+decorator==5.1.1
 dj-database-url==0.5.0
 Django==4.0.3
 django-cors-headers==3.11.0
+django-rest-knox==4.2.0
 djangorestframework==3.13.1
+dynaconf==3.1.7
 gunicorn==20.1.0
+hvac==0.11.2
+idna==3.3
+knox==0.1.14
+loguru==0.6.0
 psycopg2-binary==2.9.3
+pycparser==2.21
 pytz==2021.3
+requests==2.27.1
+shortuuid==1.0.8
+six==1.16.0
 sqlparse==0.4.2
+urllib3==1.26.9
+validators==0.18.2
 whitenoise==6.0.0
